--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-slate
-title: A place to learn about statistics and data science
-description: Wayne Tai Lee's Github Page
+title: Wayne's Github Page
+description: A place to learn about statistics
